intel/bench_214/extr_.opensslcryptoeccurve25519.c_fe_sq_with_main/log.txt
bench_214/extr_.opensslcryptoeccurve25519.c_fe_sq_with_main/extr_.opensslcryptoeccurve25519.c_fe_sq_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.opensslcryptoeccurve25519.c_fe_sq_with_main/extr_.opensslcryptoeccurve25519.c_fe_sq_with_main.c:154:12: error: default initialization of an object of const type 'const fe' (aka 'int *const')
  const fe f;
           ^
             = nullptr
2 errors generated.
HLS FPGA Parse FAILED.
